--- a/mars-rovers/assets/syle.css
+++ b/mars-rovers/assets/syle.css
@@ -25,7 +25,7 @@ body {
     line-height: 1.6;
     overflow-x: hidden;
     
-    /* BACKGROUND IMAGE (Path relative to style.css) */
+    /* BACKGROUND IMAGE: Path looks for the img folder inside assets/css/ */
     background-image: url("img/nasa-logo.png"); 
     background-repeat: no-repeat;
     background-position: center;
